--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>Title</title>
+    <title>Baker</title>
+    <link rel="icon" href="Images/icon.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="tablet.css" media="all and (max-width:1024px)">
     <link rel="stylesheet" href="mobile.css" media="all and (max-width:450px)">
